disallow-privileged-containers/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: disallow-privileged-containers-deployment
  namespace: demo
  labels:
    app: nginx
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
          securityContext:
            privileged: true
